# trabalho_cd1

./: README.md  main.ipynb  pyproject.toml  requirements.txt
