[project]
name = "trabalho_cd1"
version = "0.1.0"
description = "Análise de modelos de classificação utilizando o dataset 'dead internet'"
requires-python = ">=3.11"
dependencies = [
    "dataframe-image>=0.2.7",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
]
